fix(css): Remove extra spacing from nested ul (#4329)

--- a/src/css/screen.scss
+++ b/src/css/screen.scss
@@ -92,11 +92,13 @@ a .icon {
 
 ul p,
 ol p,
-ul ul,
-ul ol,
 ol,
 ul {
   margin-bottom: 1rem;
+}
+
+ul ul, ul ol {
+  margin-bottom: 0;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
